cilium/manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-http-gateway
spec:
  gatewayClassName: cilium
  listeners:
  - protocol: HTTP
    port: 30080
    name: web-gw
    allowedRoutes:
      namespaces:
        from: All
  - protocol: HTTPS
    port: 30443
    name: web-https-gw
    hostname: "*.localhost"
    tls:
      certificateRefs:
      - kind: Secret
        group: ""
        name: wildcard-localhost
    allowedRoutes:
      namespaces:
        from: All
