cilium/manifests/policy-add-labels.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cilium-http-gateway-add-labels
  labels:
    backstage.io/kubernetes-id: cilium-http-gateway
spec:
  background: true
  rules:
  - name: add-labels
    match:
      any:
      - resources:
          kinds:
          - Pod
          namespaces:
          - cilium-http-gateway
    mutate:
      patchStrategicMerge:
        metadata:
          labels:
            backstage.io/kubernetes-id: cilium-http-gateway
